--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
-    "react-image-gallery": "^1.3.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
